--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background: linear-gradient(0deg, rgba(1,79,134,1) 0%, rgba(1,58,99,1) 100%);
+  background: linear-gradient(163deg,rgba(1, 79, 134, 1) 0%, rgba(0, 36, 61, 1) 100%);
   margin: 0;
   padding: 0;
 }
