--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -43,6 +43,10 @@
     }
   }
 
+  .arjesu img{
+    width: 200px;
+  }
+
   .hand-up {
     display: none;
   }
@@ -61,7 +65,9 @@
       margin-top: 10px;
     }
   }
-
+  .arjesu img{
+    width: 187px;
+  }
   .hand-up {
     display: none;
   }
